--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"babel-preset-env": "^1.7.0",
 		"morgan": "^1.10.0",
 		"ts-loader": "^7.0.5",
-		"typescript": "^3.9.5",
+		"typescript": "^4.1.5",
+		"wb-packager-webpack-plugin": "^1.0.8",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
 		"webpack-dev-server": "^3.11.0"
