--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"morgan": "^1.10.0",
 		"ts-loader": "^7.0.5",
 		"typescript": "^4.1.5",
+		"uglifyjs-webpack-plugin": "^2.2.0",
 		"wb-packager-webpack-plugin": "^1.0.8",
 		"webpack": "^4.43.0",
 		"webpack-cli": "^3.3.11",
